Making sure the Swagger file is correct
