# helpers/check-request.go
@@ -8,7 +8,7 @@ import (
 
 // CheckRequest to make sure request is actually a valid request
 func CheckRequest(request structs.Request) error {
-	if len(request.CallbackAddress) < 1 || len(request.File) < 1 || len(request.Path) < 1 || len(request.IPAddressHostname) < 1 {
+	if len(request.CallbackAddress) < 1 || len(request.File) < 1 || len(request.Path) < 1 || len(request.DestinationAddress) < 1 {
 		return errors.New("Invalid payload")
 	}
 
