# structs/structs.go
@@ -10,10 +10,10 @@ type Response struct {
 // Request represents an incoming request body passed via a RESTful POST
 type Request struct {
 	// Required fields
-	IPAddressHostname string // Hostname to be sent the file
-	Path              string // Path indicates where to store the file on the server
-	File              string // Local location of the file to be sent (must be accessible from the server running the service)
-	CallbackAddress   string // Complete address to send the notification that the file transfer is complete
+	DestinationAddress string // Hostname to be sent the file
+	Path               string // Path indicates where to store the file on the server
+	File               string // Local location of the file to be sent (must be accessible from the server running the service)
+	CallbackAddress    string // Complete address to send the notification that the file transfer is complete
 
 	// Optional Fields
 	Identifier string // Optional value to be passed in so the requester can identify the host when it's sent back
